<resources>
    <string name="app_name">Life blog</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s_news">Today\'s News</string>
    <string name="user_section">User Section</string>
    <string name="available_blogs">Available Blogs</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="signuptV">Signup</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="blog">Blog</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_here">Reset Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_password">Reset Password</string>
</resources>